Add Russian (ru) language support with i18n translations
Co-authored-by: Joe Shi <2173635+JoeShi@users.noreply.github.com>

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -11,6 +11,9 @@
 - id: switch_to_english
   translation: English
 
+- id: switch_to_russian
+  translation: Русский
+
 - id: current_language
   translation: Current language
 
